--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,11 @@
 #Intellij files
 *.iml
 *.idea/
+test/
+
+#Project files
+*.wav
+*.txt
 
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
