--- a/.gitignore
+++ b/.gitignore
@@ -19,15 +19,16 @@
 *.tar.gz
 *.rar
 
-#Intellij files
+#Intellij and Eclipse files
 *.iml
 *.idea/
 test/
+.classpath
+.project
 
 #Project files
 *.wav
 *.txt
-
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
